[build-system]
requires = ["chronver", "setuptools>=66"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "RadiaSoft LLC", email = "pip@pykern.org" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]
dependencies = [
    "argh>=0.26",
    "black~=24.2",
    "future>=0.14",
    "github3.py>=1.1",
    "importlib-metadata>=0.12",
    "jinja2>=2.7",
    "msgpack>=1.0",
    "openpyxl>=3.0.9",
    "packaging>=21.0",
    "pandas>=1.3.2",
    "path.py>=7.7.1",
    "pluggy>=0.12.0",
    "psutil>=5.0",
    "py-cpuinfo>=0.2",
    "py>=1.4",
    "pytest>=2.7",
    "pytest-asyncio>=0.23.6",
    "python-dateutil>=2.4.2",
    "pytz>=2015.4",
    "requests>=2.18",
    "ruamel.yaml>=0.16.0",
    "setuptools>=66",
    "six>=1.9",
    "Sphinx>=1.3.5",
    "SQLAlchemy>=1.4,<2",
    "toml>=0.10",
    "tornado",
    "urllib3",
    "XlsxWriter>=3.2.3",
]
description = "Python application support library"
dynamic = ["version"]
name = "pykern"
readme = "README.md"

[project.scripts]
pykern = "pykern.pykern_console:main"

[project.urls]
Homepage = "http://pykern.org"

[tool.setuptools.packages.find]
include = ["pykern*"]

[tool.setuptools.package-data]
pykern = ["package_data/**"]
