[build-system]
requires = ["chronver", "setuptools>=66"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "James Bond", email = "007@example.com" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Utilities",
]
dependencies = [
    "decrypt>=1",
    "pykern",
    "encrypt>=1",
]
description = "Q's super private project"
dynamic = ["version"]
name = "private"
readme = "README.md"

[project.scripts]
private = "private.private_console:main"

[project.urls]
Homepage = "https://example.com/jb"

[tool.setuptools.package-data]
private = ["package_data/**"]

[tool.setuptools.packages.find]
include = ["private*"]
