[build-system]
requires = ["chronver", "setuptools>=66"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "RadiaSoft LLC", email = "pip@radiasoft.net" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Utilities",
]
dependencies = [
    "pykern",
]
description = "a magic trick in adventure"
dynamic = ["version"]
name = "xyzzy1"
readme = "README.md"

[project.scripts]
xyzzy1 = "xyzzy1.xyzzy1_console:main"

[project.urls]
Homepage = "https://git.radiasoft.org/xyzzy1"

[tool.setuptools.package-data]
xyzzy1 = ["package_data/**"]

[tool.setuptools.packages.find]
include = ["xyzzy1*"]
